More work on graphics basics

--- a/ReOrganizedJune10/CSS/DCF-common.Rmd
+++ b/ReOrganizedJune10/CSS/DCF-common.Rmd
@@ -10,7 +10,15 @@ require(mosaic)
 require(knitr)
 require(dplyr)
 require(tidyr)
-opts_chunk$set( tidy=FALSE, out.width="50%", comment=NA )
+
+# For typesetting
+library(ggthemes)
+baseTheme <- theme_tufte( ticks=TRUE )
+library(xkcd)
+funTheme <- theme_xkcd()
+library(ScoreR)
+opts_chunk$set( tidy=FALSE, out.width="50%", comment=NA,
+                warning=FALSE)
 options( width=60, 
          na.rm=TRUE,
          # Printing tables
